[package]
edition = "2021"
name = "tvm_block"
version = "2.0.0"
rust-version = "1.75.0"

[dependencies]
base64 = "0.13"
crc = "3.0"
ed25519 = "1.0"
ed25519-dalek = "1.0"
failure = "0.1"
hex = "0.4"
log = "0.4"
num = "0.4"
num-traits = "0.2"
sha2 = "0.10"
tvm_types = { git = "https://github.com/tvmlabs/tvm-types", branch = "rc-3.0.0" }

[dev-dependencies]
pretty_assertions = "1.3"
rand = "0.7"

[features]
default = []
gosh = []
groth = []
signature_with_id = []
