[package]
edition = "2021"
name = "tvm_block"
rust-version = "1.75.0"
version = "2.0.0"

[dependencies]
base64 = "0.13"
crc = "3.0"
ed25519 = "2"
ed25519-dalek = "2"
failure = "0.1"
hex = "0.4"
log = "0.4"
num = "0.4"
num-traits = "0.2"
sha2 = "0.10"
tvm_types = { git = "https://github.com/tvmlabs/tvm-types", tag = "3.0.0" }

[dev-dependencies]
pretty_assertions = "1.3"
rand = "0.8"

[features]
default = []
gosh = []
groth = []
signature_with_id = []
