[package]
edition = "2021"
name = "tvm_block"
rust-version = "1.75.0"
version = "2.0.0"

[dependencies]
anyhow = "1.0.79"
thiserror = "1.0.56"
base64 = "0.21.7"
crc = "3.0.1"
ed25519 = "2.2.3"
ed25519-dalek = "2.1.0"
hex = "0.4.3"
log = "0.4.20"
num = "0.4.1"
num-traits = "0.2.17"
sha2 = "0.10.8"
tvm_types = { git = "https://github.com/tvmlabs/tvm-types", tag = "3.0.1" }

[dev-dependencies]
pretty_assertions = "1.4.0"
rand = "0.8.5"

[features]
default = []
gosh = []
groth = []
signature_with_id = []
